--- a/FastFood-App/src/app/app.component.css
+++ b/FastFood-App/src/app/app.component.css
@@ -3,5 +3,13 @@
     top: 0;
     z-index: 10;
     width: 100%;
-    height: 120px;
+    height: 90px;
+}
+
+#app .footer{
+    position: fixed;
+    bottom: 0;
+    z-index: 10;
+    width: 100%;
+    height: 70px;
 }
