--- a/FastFood-App/src/app/app.component.html
+++ b/FastFood-App/src/app/app.component.html
@@ -10,8 +10,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12">
-      <!-- footer -->
+    <div class="col-12 footer">
+      <app-footer></app-footer>
     </div>
   </div>
 </div>
