--- a/FastFood-App/src/app/components/footer/footer.component.html
+++ b/FastFood-App/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="row" id="footer">
-  <div class="col-12 mt-3 mb-4">
+  <div class=" mt-3 mb-4">
     <button type="button" class="btn btn-block btn-primary" id="button">
       {{ "my.order" | copy }}
       <i class="fa fa-plus-circle"></i>
