--- a/FastFood-App/src/styles.css
+++ b/FastFood-App/src/styles.css
@@ -10,8 +10,8 @@ html, body{
 }
 
 html body{
-    margin-top: 120px;
-    margin-bottom: 85px;
+    margin-top: 90px;
+    margin-bottom: 70px;
 }
 
 .spinner{
@@ -19,6 +19,11 @@ html body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.img-medium{
+    width: 300px;
+    height: 300px;
 }
 
 html, body { height: 100%; }
