--- a/FastFood-App/src/app/components/list-category/list-category.component.html
+++ b/FastFood-App/src/app/components/list-category/list-category.component.html
@@ -1,18 +1,21 @@
 <div class="row mt-4 mb-4" id="category">
   <div class="col-12">
-
     <div class="row" *ngIf="listcategory.length === 0">
       <div class="col-12 text-center">
-        <span>{{'no.categories' | copy}}</span>
+        <span>{{ "no.categories" | copy }}</span>
       </div>
     </div>
 
     <div class="row" *ngIf="listcategory.length > 0">
-      <div class="col-12 col-md-4 col-sm-6 category" (click)="selectCategory(cat)" *ngFor="let cat of listcategory">
-        <img [src]="cat.img" class="img-medium">
-        <span class="d-block text-center" id="text">{{cat.name | copy}}</span>
+      <div
+        class="col-12 col-md-4 col-sm-6 category"
+        (click)="selectCategory(cat)"
+        [routerLink]="['/list-product']"
+        *ngFor="let cat of listcategory"
+      >
+        <img [src]="cat.img" class="img-medium" id="img" />
+        <span class="d-block text-center" id="text">{{ cat.name | copy }}</span>
       </div>
     </div>
-
   </div>
 </div>
