--- a/FastFood-App/src/app/components/list-product/list-product.component.html
+++ b/FastFood-App/src/app/components/list-product/list-product.component.html
@@ -1,3 +1,20 @@
-<p>
-  list-product works!
-</p>
+<div class="row" id="products">
+  <div class="col-12">
+
+    <div class="row" *ngIf="listProducts.length === 0">
+      <div class="col-12 text-center">
+        <span>{{'no.products' | copy}}</span>
+      </div>
+    </div>
+
+    <div class="row" *ngIf="listProducts.length > 0">
+      <div class="col-md-4 col-sm-6 col-12 product" *ngFor="let product of listProducts">
+        <img [src]="product.img" class="img-medium"/>
+        <span class="d-block" id="text">{{product.name | copy}}</span>
+        <span class="d-block" id="textprice">$ {{product.price}}</span>
+
+      </div>
+    </div>
+
+  </div>
+</div>
