ajuste de servicios, creacion de product

--- a/FastFood-App/src/app/components/header/header.component.html
+++ b/FastFood-App/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="row" id="header">
   <div class="col-1">
-    <img src="assets/img/logo.png" class="c-pointer">
+    <img src="assets/img/logo.png" class="c-pointer" [routerLink]="['/list-category']">
   </div>
   <div class="col-10 mt-2 mb-2">
     <h1 class="text-center text-light title mt-3">{{'app' | copy}}</h1>
