--- a/FastFood-App/src/styles.css
+++ b/FastFood-App/src/styles.css
@@ -21,9 +21,29 @@ html body{
     transform: translate(-50%, -50%);
 }
 
+.img-small{
+    width: 150px;
+    height: 150px;
+}
+
 .img-medium{
     width: 300px;
     height: 300px;
+}
+
+.img-large{
+    width: 500px;
+    height: 500px;
+}
+
+#text{
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#text-grande{
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 html, body { height: 100%; }
