--- a/FastFood-App/src/app/components/footer/footer.component.html
+++ b/FastFood-App/src/app/components/footer/footer.component.html
@@ -1,8 +1,33 @@
 <div class="row" id="footer">
   <div class=" mt-3 mb-4">
-    <button type="button" class="btn btn-block btn-primary" id="button">
+    <button type="button" class="btn btn-block btn-primary" id="button" (click)="openOrder()">
       {{ "my.order" | copy }}
       <i class="fa fa-plus-circle"></i>
     </button>
   </div>
 </div>
+
+<ng-template #modal_order let-modal>
+        <div class="modal-header">
+          <h5 class="modal-title" id="text">{{'pay.order' | copy}}</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="modal.dismiss()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+          <div class="row" *ngIf="OrderService.order.quantityProducts() === 0">
+            <div class="col-12 text-center">
+              <span class="no-elements" id="text">{{'no.elements.order' | copy}}</span>
+            </div>
+          </div>
+          <div class="row" *ngIf="OrderService.order.quantityProducts() > 0">
+            <div class="col-12">
+              <app-productsOrder></app-productsOrder>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-dark" (click)="modal.close('yes')" data-dismiss="modal">{{'do.order' | copy}}</button>
+          <button type="button" class="btn btn-outline-dark" (click)="modal.close('no')">{{'cancel' | copy}}</button>
+        </div>
+</ng-template>
