--- a/FastFood-App/src/app/components/product/product.component.css
+++ b/FastFood-App/src/app/components/product/product.component.css
@@ -7,6 +7,11 @@
     font-size: 22px;
 }
 
+#product-page ::ng-deep .mat-radio-label-content{
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 #product-page ::ng-deep .mat-checkbox-frame,
 #product-page ::ng-deep .mat-checkbox-background{
     border-radius: 50px;
@@ -34,9 +39,18 @@
     transform: scale(0.7);
 }
 
+#product-page ::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle{
+    border-color: #000;
+}
+
 #product-page ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background{
     background-color: #d64d0e;
 }
+
+#product-page ::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle{
+    background-color: #d64d0e;
+}
+
 
 @media (min-width: 768px){
     #product-page ::ng-deep .block-radio{
