--- a/FastFood-App/src/styles.css
+++ b/FastFood-App/src/styles.css
@@ -14,6 +14,14 @@ html body{
     margin-bottom: 70px;
 }
 
+.button{
+    background-color: #d64d0e;    
+    border-color: #db5c21;
+}
+.button:hover{
+    background-color: #db5c21;
+}
+
 .spinner{
     position: fixed;
     top: 50%;
