--- a/FastFood-App/src/app/components/footer/footer.component.css
+++ b/FastFood-App/src/app/components/footer/footer.component.css
@@ -5,4 +5,6 @@
 #button{
     width: 100%;
     background-color: rgb(131, 83, 59);
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
