centramiento de imagenes

--- a/FastFood-App/src/app/components/product/product.component.html
+++ b/FastFood-App/src/app/components/product/product.component.html
@@ -20,7 +20,7 @@
             </div>
           </div>
 
-          <div class="row g-0">
+          <div class="row g-0 container-img">
             <div
               class="col-3 extra border"
               *ngFor="let extra of extras.products"
