--- a/FastFood-App/src/app/components/list-product/list-product.component.html
+++ b/FastFood-App/src/app/components/list-product/list-product.component.html
@@ -6,7 +6,7 @@
       </div>
     </div>
 
-    <div class="row" *ngIf="listProduct.length > 0">
+    <div class="row container-img" *ngIf="listProduct.length > 0">
       <div
         class="col-md-4 col-sm-6 col-12 product"
         (click)="selectProduct(product)"
