--- a/FastFood-App/src/styles.css
+++ b/FastFood-App/src/styles.css
@@ -39,6 +39,12 @@ html body{
     height: 300px;
 }
 
+.container-img{
+    display: flex;
+    justify-content: center;
+    align-items: inherit;
+  }
+
 .img-large{
     width: 500px;
     height: 500px;
