--- a/FastFood-App/src/app/components/footer/footer.component.html
+++ b/FastFood-App/src/app/components/footer/footer.component.html
@@ -31,3 +31,15 @@
           <button type="button" class="btn btn-outline-dark" (click)="modal.close('no')">{{'cancel' | copy}}</button>
         </div>
 </ng-template>
+
+<ng-template #modal_num_order let-modal>
+        <div class="modal-header">
+          <h5 class="modal-title">{{'modal.num.order.title' | copy}}</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="modal.dismiss()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+        {{('info.num.order.start' | copy) + ' ' + (OrderService.numOrder-1) + ' ' + ('info.num.order.end' | copy)}}
+        </div>
+</ng-template>
